--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -259,9 +259,10 @@
                         </div>
                     </div>
                     <div class="data-footer">
-                        <a class="btn-flat">Process</a>
-                        <a href="#/appraisal/admin/empList" class="btn-flat">Initiation</a>
+                        <!--<a class="btn-flat">Process</a>
+                        <a href="#/appraisal/admin/empList" class="btn-flat">Initiation</a>-->
                     </div>
+                    <div class="overlay-upcoming"></div>
                 </div>
                 <div class="card white card-bg" *ngIf="appraisalAssignedTo">
                     <div class="row m-bottom0">
