--- a/src/app/modules/appraisals/reviewer.component.html
+++ b/src/app/modules/appraisals/reviewer.component.html
@@ -72,7 +72,12 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <textarea class="materialize-textarea m-btm" style="height: 44px;" [(ngModel)]="reviewerComments"></textarea>
+                                            <textarea class="materialize-textarea m-btm" style="height: 44px;" [(ngModel)]="reviewerComments" name="comments" id="comments" #comments="ngModel" required></textarea>
+                                            <div *ngIf="comments.errors && formSubmit==true" class="red">
+                                                <div [hidden]="!comments.errors.required">
+                                                    Comment is required
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col s3 m3 l3 right-bar right-bar-reviewer padding-zero">
                                             <div class="rating-panel-reviewer">
@@ -111,7 +116,7 @@
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 m12 l6 right-align" *ngIf="!isApplied">
                                 <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
-                                <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='applyReveiwerForm()'>Apply</a>
+                                <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='applyReveiwerForm(comments)'>Apply</a>
                             </div>
                             <div class="col s12 m12 l6 right-align" *ngIf="isApplied">
                                 <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
