Footer change for firefox

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
                         </li>
                         <li>
                             <i class="fa fa-firefox" aria-hidden="true"></i>
-                            <h6 class="margin-zero">Ver 46+ -64-bit</h6>
+                            <h6 class="margin-zero">Ver 46+ (64-bit)</h6>
                         </li>
                         <li>
                             <i class="fa fa-safari" aria-hidden="true"></i>
