--- a/src/app/modules/travel/travel.new.template.html
+++ b/src/app/modules/travel/travel.new.template.html
@@ -230,7 +230,7 @@
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Business Prospect</h6>
-                                                    <input type="text" required="required" name="businessProspect" #businessProspect="ngModel" [(ngModel)]="clientInformationModel.businessProspect" [ngClass]="{borderbottom: !businessProspect.valid && formSubmitted}" >
+                                                    <input type="text" maxlength="50" required="required" name="businessProspect" #businessProspect="ngModel" [(ngModel)]="clientInformationModel.businessProspect" [ngClass]="{borderbottom: !businessProspect.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !businessProspect.valid" class="alert alert-danger">Business Prospect is required </div>
                                                 </div>
                                             </div>
@@ -247,29 +247,29 @@
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Purpose of Visit</h6>
-                                                    <input type="text" required="required" name="purposeOfVisit" #purposeOfVisit="ngModel" [(ngModel)]="clientInformationModel.purposeOfVisit" [ngClass]="{borderbottom: !purposeOfVisit.valid && formSubmitted}" >
+                                                    <input type="text" maxlength="100" required="required" name="purposeOfVisit" #purposeOfVisit="ngModel" [(ngModel)]="clientInformationModel.purposeOfVisit" [ngClass]="{borderbottom: !purposeOfVisit.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !purposeOfVisit.valid" class="alert alert-danger">Purpose of Visit is required </div>
                                                 </div>
                                             </div>
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Client Contact Number</h6>
-                                                    <input type="number" required="required" name="contactNumber" #contactNumber="ngModel" [(ngModel)]="clientInformationModel.contactNumber" [ngClass]="{borderbottom: !contactNumber.valid && formSubmitted}" >
+                                                    <input type="text" pattern="\d*" maxlength="10" required="required" name="contactNumber" #contactNumber="ngModel" [(ngModel)]="clientInformationModel.contactNumber" [ngClass]="{borderbottom: !contactNumber.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !contactNumber.valid" class="alert alert-danger">Client Contact Number is required </div>
                                                 </div>
                                             </div>
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Client Address</h6>
-                                                    <input type="text" required="required" name="adddress" #adddress="ngModel" [(ngModel)]="clientInformationModel.adddress" [ngClass]="{borderbottom: !adddress.valid && formSubmitted}" >
+                                                    <input type="text" maxlength="200" required="required" name="adddress" #adddress="ngModel" [(ngModel)]="clientInformationModel.adddress" [ngClass]="{borderbottom: !adddress.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !adddress.valid" class="alert alert-danger">Client Adddress is required </div>
                                                 </div>
                                             </div>
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Client Email Id</h6>
-                                                    <input type="text" required="required" name="emailId" #emailId="ngModel" [(ngModel)]="clientInformationModel.emailId" [ngClass]="{borderbottom: !emailId.valid && formSubmitted}" >
-                                                    <div *ngIf="formSubmitted && !emailId.valid" class="alert alert-danger">Email-Id is required</div>
+                                                    <input type="text" maxlength="50" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required="required" name="emailId" #emailId="ngModel" [(ngModel)]="clientInformationModel.emailId" [ngClass]="{borderbottom: !emailId.valid && formSubmitted}" >
+                                                    <div *ngIf="formSubmitted && !emailId.valid" class="alert alert-danger">Valid email-id is required.</div>
                                                 </div>
                                             </div>
                                         </form>
@@ -295,7 +295,7 @@
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field col s12">
                                                     <h6>Travel title</h6>
-                                                    <input type="text" required="required" name="travelTitle" #travelTitle="ngModel" [(ngModel)]="travelRequirementsModel.travelTitle" [ngClass]="{borderbottom: !travelTitle.valid && formSubmitted}" >
+                                                    <input type="text" required="required" maxlength="50" name="travelTitle" #travelTitle="ngModel" [(ngModel)]="travelRequirementsModel.travelTitle" [ngClass]="{borderbottom: !travelTitle.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !travelTitle.valid" class="alert alert-danger">Travel title is required </div>
                                                 </div>
                                             </div>
@@ -312,12 +312,12 @@
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s6">
                                                     <h6>Source</h6>
-                                                    <input type="text" required="required" name="travelFrom" #travelFrom="ngModel" [(ngModel)]="travelRequirementsModel.travelFrom" [ngClass]="{borderbottom: !travelFrom.valid && formSubmitted}" >
+                                                    <input type="text" required="required" maxlength="50" name="travelFrom" #travelFrom="ngModel" [(ngModel)]="travelRequirementsModel.travelFrom" [ngClass]="{borderbottom: !travelFrom.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !travelFrom.valid" class="alert alert-danger">Source is required</div>
                                                 </div>
                                                 <div class="custom-input-field input-field col s6">
                                                     <h6>Destination</h6>
-                                                    <input type="text" required="required" name="travelTo" #travelTo="ngModel" [(ngModel)]="travelRequirementsModel.travelTo" [ngClass]="{borderbottom: !travelTo.valid && formSubmitted}" >
+                                                    <input type="text" required="required" name="travelTo" maxlength="50" #travelTo="ngModel" [(ngModel)]="travelRequirementsModel.travelTo" [ngClass]="{borderbottom: !travelTo.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !travelTo.valid" class="alert alert-danger">Destination is required</div>
                                                 </div>
                                             </div>
